--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,14 @@ body{
     .future-forecast__container{
         justify-content: start;
         align-items: none;
-        overflow-y: scroll;
+        overflow-x: scroll;
     }
 
+}
+
+@media only screen and (max-width: 1000px){
+    .future-forecast__container{
+        justify-content: start;
+        align-items: none;overflow-y: scroll;
+    }
 }
